--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5464,7 +5464,6 @@ payload:
   - '+.7017k.com'
   - '+.701sou.com'
   - '+.703804.com'
-  - '+.705112.com'
   - '+.7080edu.com'
   - '+.7082.com'
   - '+.709xs.com'
@@ -7315,6 +7314,7 @@ payload:
   - '+.acgist.com'
   - '+.acgn.pw'
   - '+.acgndog.com'
+  - '+.acgorg.com'
   - '+.acgp.xyz'
   - '+.acgpiping.net'
   - '+.acgqd.com'
@@ -9302,6 +9302,7 @@ payload:
   - '+.autobizreview.com'
   - '+.autocamel.com'
   - '+.autochina360.com'
+  - '+.autochinashow.org'
   - '+.autochips.com'
   - '+.autodg.com'
   - '+.autodmp.com'
@@ -9892,6 +9893,7 @@ payload:
   - '+.bao21.com'
   - '+.bao315.com'
   - '+.bao369.com'
+  - '+.baoaha.com'
   - '+.baobabnet.com'
   - '+.baobao.com'
   - '+.baobao001.com'
@@ -12894,6 +12896,7 @@ payload:
   - '+.cdeledu.com'
   - '+.cdfcn.com'
   - '+.cdfgsanya.com'
+  - '+.cdfhnms.com'
   - '+.cdfinger.com'
   - '+.cdfmembers.com'
   - '+.cdfortis.com'
@@ -14531,7 +14534,6 @@ payload:
   - '+.chivox.com'
   - '+.chivoxapp.com'
   - '+.chiwayedu.com'
-  - '+.chixing.net'
   - '+.chixingkeji.com'
   - '+.chixm.com'
   - '+.chiyuebing.com'
@@ -14596,6 +14598,7 @@ payload:
   - '+.chonghi.com'
   - '+.chongmingzhuce.com'
   - '+.chongqingdongjin.com'
+  - '+.chongqingyoupin.com'
   - '+.chongsoft.com'
   - '+.chongwu.cc'
   - '+.chongwujiaoyi.com'
@@ -18206,7 +18209,6 @@ payload:
   - '+.dianjinzs.com'
   - '+.dianjiqi.com'
   - '+.diankeji.com'
-  - '+.dianlancg.com'
   - '+.dianler.com'
   - '+.dianli.com'
   - '+.dianli08.com'
@@ -20961,6 +20963,7 @@ payload:
   - '+.ewei.com'
   - '+.eweiqi.com'
   - '+.ewenyan.com'
+  - '+.ewerew.com'
   - '+.ewide.net'
   - '+.ewidecloud.com'
   - '+.ewidewater.com'
@@ -21867,6 +21870,7 @@ payload:
   - '+.fgo-teamup.com'
   - '+.fgo.wiki'
   - '+.fgowiki.com'
+  - '+.fgtymk.com'
   - '+.fgvisa.net'
   - '+.fh1551.com'
   - '+.fh21static.com'
@@ -22951,6 +22955,7 @@ payload:
   - '+.gamersky.com'
   - '+.gamerstorm.com'
   - '+.gamesh.com'
+  - '+.gameshr.com'
   - '+.gamesifu.com'
   - '+.gamesir.com'
   - '+.gametanzi.com'
@@ -23010,6 +23015,7 @@ payload:
   - '+.gaobata.com'
   - '+.gaobei.com'
   - '+.gaobiao.net'
+  - '+.gaocangyun.com'
   - '+.gaocegege.com'
   - '+.gaochengnews.net'
   - '+.gaochun.info'
@@ -23509,6 +23515,7 @@ payload:
   - '+.ggemo.com'
   - '+.ggerg.com'
   - '+.ggeye.com'
+  - '+.gggqa.com'
   - '+.ggj88.com'
   - '+.ggjrw.com'
   - '+.ggjstz.com'
@@ -24294,6 +24301,7 @@ payload:
   - '+.gsxzq.com'
   - '+.gszlyy.com'
   - '+.gszph.com'
+  - '+.gt-key.com'
   - '+.gt-oil.com'
   - '+.gt-semi.com'
   - '+.gt520.com'
@@ -25694,7 +25702,6 @@ payload:
   - '+.hasea.com'
   - '+.hasee.com'
   - '+.hasee.net'
-  - '+.hashcloud.cz'
   - '+.hashcoding.net'
   - '+.hashnest.com'
   - '+.hasndq.com'
@@ -26117,6 +26124,7 @@ payload:
   - '+.hehouse.com'
   - '+.hei7.net'
   - '+.heibai.org'
+  - '+.heibaige.com'
   - '+.heibaimanhua.com'
   - '+.heicha.com'
   - '+.heicheng51.com'
@@ -26774,6 +26782,7 @@ payload:
   - '+.hlapi.com'
   - '+.hlbeixiu.com'
   - '+.hlbeixiu.net'
+  - '+.hlcxy.com'
   - '+.hld-marathon.com'
   - '+.hldbtv.com'
   - '+.hldgp.com'
@@ -32533,7 +32542,6 @@ payload:
   - '+.jsocr.com'
   - '+.json-json.com'
   - '+.jsonin.com'
-  - '+.jsonnode.com'
   - '+.jsososo.com'
   - '+.jsp51.com'
   - '+.jspang.com'
@@ -33909,6 +33917,7 @@ payload:
   - '+.kltong.com'
   - '+.klub11.com'
   - '+.klunf.com'
+  - '+.klv5qu.com'
   - '+.klvtu.com'
   - '+.klxuexi.com'
   - '+.km.com'
@@ -34561,6 +34570,7 @@ payload:
   - '+.kxxxl.com'
   - '+.kxzmw.com'
   - '+.ky-express.com'
+  - '+.ky010.vip'
   - '+.ky5yx.com'
   - '+.ky958.com'
   - '+.kybapp.com'
@@ -34704,6 +34714,7 @@ payload:
   - '+.lakala.com'
   - '+.lakecn.com'
   - '+.lakwdian.com'
+  - '+.lalasky.com'
   - '+.lalkk.com'
   - '+.lalunalove.com'
   - '+.lamabang.com'
@@ -37042,7 +37053,6 @@ payload:
   - '+.lwork.com'
   - '+.lwrcb.com'
   - '+.lwsay.com'
-  - '+.lwtxt.cc'
   - '+.lwxgds.com'
   - '+.lwxiaoshuo.com'
   - '+.lwxs.org'
@@ -37360,6 +37370,7 @@ payload:
   - '+.maifjb.com'
   - '+.maigevoice.com'
   - '+.maigoo.com'
+  - '+.maiguduo.com'
   - '+.maihanji.com'
   - '+.maihaoche.com'
   - '+.maihehd.com'
@@ -38375,6 +38386,7 @@ payload:
   - '+.mibokids.com'
   - '+.mibugs.com'
   - '+.mic-s.com'
+  - '+.micad.org'
   - '+.micai.com'
   - '+.micaihu.net'
   - '+.micaiying.com'
@@ -38592,6 +38604,7 @@ payload:
   - '+.mingrenteahouse.com'
   - '+.mingrenxiang.com'
   - '+.mingricctv.com'
+  - '+.mingshi51.com'
   - '+.mingshiedu.com'
   - '+.mingshijt.com'
   - '+.mingsoft.net'
@@ -48172,6 +48185,7 @@ payload:
   - '+.siyuanedu.com'
   - '+.siyuanren.com'
   - '+.siyuefeng.com'
+  - '+.siyuetian.net'
   - '+.siyuweb.com'
   - '+.sizeofvoid.net'
   - '+.sizuo.com'
@@ -50348,7 +50362,6 @@ payload:
   - '+.taladapp.com'
   - '+.talbrain.com'
   - '+.talebase.com'
-  - '+.talebook.org'
   - '+.talentjava.com'
   - '+.talents-tech.com'
   - '+.talentsmag.com'
@@ -53721,6 +53734,7 @@ payload:
   - '+.vidarsoft.com'
   - '+.viday.org'
   - '+.videaba.com'
+  - '+.video-study.com'
   - '+.videocc.net'
   - '+.videohupu.com'
   - '+.videoincloud.com'
@@ -56740,6 +56754,7 @@ payload:
   - '+.wx.com'
   - '+.wx135.com'
   - '+.wx16999.com'
+  - '+.wx2share.com'
   - '+.wx42.com'
   - '+.wx6.org'
   - '+.wx8s.com'
@@ -57178,6 +57193,7 @@ payload:
   - '+.xdja.com'
   - '+.xdjc.org'
   - '+.xdju.com'
+  - '+.xdjunxiao.com'
   - '+.xdjy369.com'
   - '+.xdkb.net'
   - '+.xdkcw.com'
@@ -57207,6 +57223,7 @@ payload:
   - '+.xdwan.com'
   - '+.xdwyx.com'
   - '+.xdxdsz.com'
+  - '+.xdxialingying.com'
   - '+.xdxmwang.com'
   - '+.xdxx.ink'
   - '+.xdyqw.com'
@@ -61331,6 +61348,7 @@ payload:
   - '+.yovocloud.com'
   - '+.yovole.com'
   - '+.yovyuan.com'
+  - '+.yowbbxi.cyou'
   - '+.yowooa.com'
   - '+.yoxiha.com'
   - '+.yoximi.com'
@@ -61365,7 +61383,6 @@ payload:
   - '+.ypjiameng.com'
   - '+.ypk.cc'
   - '+.yplady.com'
-  - '+.yplmzx.com'
   - '+.ypppt.com'
   - '+.ypshengxian.com'
   - '+.ypstech.com'
@@ -62153,6 +62170,7 @@ payload:
   - '+.yx74.com'
   - '+.yx7507.com'
   - '+.yxbao.com'
+  - '+.yxbdwlkj.com'
   - '+.yxbhhbkj.com'
   - '+.yxbox91.com'
   - '+.yxbuluo.com'
@@ -62827,6 +62845,7 @@ payload:
   - '+.zgrdnews.com'
   - '+.zgrlm.com'
   - '+.zgruisai.com'
+  - '+.zgrybhw.com'
   - '+.zgsc123.com'
   - '+.zgsclp.com'
   - '+.zgsd.net'
@@ -63288,6 +63307,7 @@ payload:
   - '+.zhihejia.com'
   - '+.zhihemobi.com'
   - '+.zhihengwangchen.com'
+  - '+.zhihevip.com'
   - '+.zhihjf.com'
   - '+.zhihone.com'
   - '+.zhihu.com'
@@ -65096,6 +65116,7 @@ payload:
   - '+.zzwqqx.com'
   - '+.zzwro.com'
   - '+.zzxdc.com'
+  - '+.zzxfjxzz.com'
   - '+.zzxw.net'
   - '+.zzxy.net'
   - '+.zzyb.org'
