--- a/directbak.yaml
+++ b/directbak.yaml
@@ -325,7 +325,6 @@ payload:
   - '+.0479xx.com'
   - '+.051058.com'
   - '+.0510syedu.com'
-  - '+.0511w.com'
   - '+.0512118114.com'
   - '+.0512pearl.com'
   - '+.0513.net'
@@ -1016,7 +1015,6 @@ payload:
   - '+.12114rc.com'
   - '+.1212.com'
   - '+.12120.net'
-  - '+.1213.me'
   - '+.121314.com'
   - '+.121ask.com'
   - '+.121down.com'
@@ -1697,8 +1695,6 @@ payload:
   - '+.189young.com'
   - '+.18chonglou.com'
   - '+.18cp.vip'
-  - '+.18dao.com'
-  - '+.18dao.org'
   - '+.18daxue.com'
   - '+.18dx.com'
   - '+.18guanjia.com'
@@ -3227,7 +3223,6 @@ payload:
   - '+.3jdh.com'
   - '+.3jidi.com'
   - '+.3jke.com'
-  - '+.3jrx.com'
   - '+.3k.com'
   - '+.3k3cn.com'
   - '+.3ke.cc'
@@ -3609,7 +3604,6 @@ payload:
   - '+.5068.com'
   - '+.5068yx.com'
   - '+.506fhq.com'
-  - '+.507777.cc'
   - '+.50970.com'
   - '+.50bangzh.com'
   - '+.50fff.net'
@@ -6034,6 +6028,7 @@ payload:
   - '+.84ktv.com'
   - '+.84zcb.com'
   - '+.84zhu.com'
+  - '+.850718.xyz'
   - '+.8518.com'
   - '+.8521.org'
   - '+.85229666.com'
@@ -9200,7 +9195,6 @@ payload:
   - '+.at58.com'
   - '+.at78.com'
   - '+.at851.com'
-  - '+.at864.com'
   - '+.at98.com'
   - '+.ata-edu.com'
   - '+.ata-test.net'
@@ -9864,7 +9858,6 @@ payload:
   - '+.bankpublish.com'
   - '+.banksteel.com'
   - '+.bankyy.net'
-  - '+.banluyoulian.com'
   - '+.banma-inc.com'
   - '+.banma.com'
   - '+.banmajsq.com'
@@ -10397,7 +10390,6 @@ payload:
   - '+.bemanicn.com'
   - '+.bemfa.com'
   - '+.bemhome.com'
-  - '+.bemyceo.com'
   - '+.benbenq.com'
   - '+.benber-tech.com'
   - '+.benber.com'
@@ -13509,6 +13501,7 @@ payload:
   - '+.chaowanjoy.com'
   - '+.chaoxin.com'
   - '+.chaoxing.com'
+  - '+.chaoyi996.com'
   - '+.chaoyindj.com'
   - '+.chaoyisy.com'
   - '+.chaoyuelm.com'
@@ -14410,7 +14403,6 @@ payload:
   - '+.chinauo.com'
   - '+.chinauos.com'
   - '+.chinauos.net'
-  - '+.chinauos.org'
   - '+.chinaups.com'
   - '+.chinaus-maker.org'
   - '+.chinaus.com'
@@ -15299,7 +15291,6 @@ payload:
   - '+.cn0713.com'
   - '+.cn0851.com'
   - '+.cn0917.com'
-  - '+.cn12333.com'
   - '+.cn12365.org'
   - '+.cn163.net'
   - '+.cn168.com'
@@ -15562,7 +15553,6 @@ payload:
   - '+.cnipa-tj.com'
   - '+.cnipai.com'
   - '+.cnipr.com'
-  - '+.cnisland.com'
   - '+.cnisp.org'
   - '+.cnit-research.com'
   - '+.cnitblog.com'
@@ -15828,6 +15818,7 @@ payload:
   - '+.cnwtn.com'
   - '+.cnwxw.com'
   - '+.cnxad.com'
+  - '+.cnxclm.com'
   - '+.cnxct.com'
   - '+.cnxds.com'
   - '+.cnxfans.com'
@@ -16535,7 +16526,6 @@ payload:
   - '+.crsn168.com'
   - '+.cruelcoding.com'
   - '+.crvic.org'
-  - '+.crxdl.com'
   - '+.cryptape.com'
   - '+.crystalcg.com'
   - '+.crystaledu.com'
@@ -17483,7 +17473,6 @@ payload:
   - '+.dapiniu.com'
   - '+.dapmax.com'
   - '+.dappdiscover.com'
-  - '+.dapu.com'
   - '+.daqi.com'
   - '+.daqianduan.com'
   - '+.daqiangpco.com'
@@ -19206,7 +19195,6 @@ payload:
   - '+.dreamsz.net'
   - '+.dreawer.com'
   - '+.drgou.com'
-  - '+.drhudong.com'
   - '+.drice.cc'
   - '+.drip.im'
   - '+.dripcar.com'
@@ -20289,7 +20277,6 @@ payload:
   - '+.efwang.com'
   - '+.efwh.com'
   - '+.efy-tech.com'
-  - '+.efyt6.com'
   - '+.egainnews.com'
   - '+.egcmedia.com'
   - '+.egfcare.com'
@@ -21241,7 +21228,6 @@ payload:
   - '+.fala114.com'
   - '+.falomall.com'
   - '+.faloo.com'
-  - '+.famanoder.com'
   - '+.fameile.net'
   - '+.famen88.com'
   - '+.famens.com'
@@ -21533,6 +21519,7 @@ payload:
   - '+.fc811.com'
   - '+.fcachinagsdp.com'
   - '+.fcai.com'
+  - '+.fcapp.run'
   - '+.fcb16888.com'
   - '+.fcbox.com'
   - '+.fcchbj.com'
@@ -22012,6 +21999,7 @@ payload:
   - '+.fitoneapp.com'
   - '+.fiuchina.com'
   - '+.fivestarsolar.com'
+  - '+.fixhdd.org'
   - '+.fixsub.net'
   - '+.fiyta.com'
   - '+.fj-atfz.com'
@@ -22387,7 +22375,6 @@ payload:
   - '+.francochinois.com'
   - '+.frankorz.com'
   - '+.franzsandner.com'
-  - '+.frbao.com'
   - '+.frdic.com'
   - '+.fread.com'
   - '+.fredamd.com'
@@ -23300,7 +23287,6 @@ payload:
   - '+.gdzs2018.cc'
   - '+.gdzs2018.vip'
   - '+.gdzsxx.com'
-  - '+.gdztck.com'
   - '+.gdzuoxie.com'
   - '+.gdzzz.com'
   - '+.ge-garden.net'
@@ -23658,6 +23644,7 @@ payload:
   - '+.gjjnhb.com'
   - '+.gjnlyd.com'
   - '+.gjpdh.com'
+  - '+.gjrwls.com'
   - '+.gjsj.com'
   - '+.gjtjjp.com'
   - '+.gjw.com'
@@ -24116,6 +24103,7 @@ payload:
   - '+.gouwuke.com'
   - '+.gouwuyu.com'
   - '+.govfz.com'
+  - '+.govhebie.com'
   - '+.govmade.com'
   - '+.gow100.com'
   - '+.gowa.club'
@@ -24735,6 +24723,7 @@ payload:
   - '+.gxicpa.com'
   - '+.gxidc.com'
   - '+.gxind.com'
+  - '+.gxipo.net'
   - '+.gxjgdj.com'
   - '+.gxjs.net'
   - '+.gxjtaq.com'
@@ -24761,7 +24750,6 @@ payload:
   - '+.gxskm.com'
   - '+.gxsky.com'
   - '+.gxtodo.com'
-  - '+.gxtstatic.com'
   - '+.gxwmcu.com'
   - '+.gxxgle.com'
   - '+.gxxiaotutu.com'
@@ -25994,7 +25982,6 @@ payload:
   - '+.hd12333.com'
   - '+.hd199.com'
   - '+.hd199.net'
-  - '+.hd288.com'
   - '+.hd3p.com'
   - '+.hd88599.com'
   - '+.hdavchina.com'
@@ -26003,6 +25990,7 @@ payload:
   - '+.hdchd.cc'
   - '+.hdcolorant.com'
   - '+.hdd-group.com'
+  - '+.hddata.net'
   - '+.hddhhn.com'
   - '+.hddid.com'
   - '+.hddznet.com'
@@ -26605,6 +26593,7 @@ payload:
   - '+.himengyou.com'
   - '+.himetoo.com'
   - '+.himigame.com'
+  - '+.himmpat.com'
   - '+.himofi.com'
   - '+.himuzik.net'
   - '+.himy2.com'
@@ -26659,7 +26648,6 @@ payload:
   - '+.hitfmfans.com'
   - '+.hitgk.com'
   - '+.hitnology.com'
-  - '+.hitokoto.us'
   - '+.hitouch.com'
   - '+.hitui.com'
   - '+.hitutu.com'
@@ -28415,7 +28403,6 @@ payload:
   - '+.hyimmi.com'
   - '+.hyipchina.com'
   - '+.hyj999.com'
-  - '+.hyjesc.com'
   - '+.hyjgxx.com'
   - '+.hyjp.net'
   - '+.hykang.com'
@@ -28509,7 +28496,6 @@ payload:
   - '+.hzhltec.com'
   - '+.hzhr.com'
   - '+.hzhuangxiang.com'
-  - '+.hzhuaxindianzishangwu.com'
   - '+.hzhx.com'
   - '+.hzins.com'
   - '+.hzins.net'
@@ -28663,7 +28649,6 @@ payload:
   - '+.i7wx.com'
   - '+.i8001.com'
   - '+.i8cn.com'
-  - '+.i8gua.com'
   - '+.i8i8i8.com'
   - '+.i8tq.com'
   - '+.i9.org'
@@ -28788,7 +28773,6 @@ payload:
   - '+.ibtba.cc'
   - '+.ibtmao.com'
   - '+.ibtsat.com'
-  - '+.ibtyun.com'
   - '+.ibuick.com'
   - '+.ibuscloud.com'
   - '+.ibuying.com'
@@ -29115,7 +29099,6 @@ payload:
   - '+.idtcdn.com'
   - '+.idtechwh.com'
   - '+.idu9.com'
-  - '+.idudo.com'
   - '+.iduo8.com'
   - '+.iduochong.com'
   - '+.iduodou.com'
@@ -29228,6 +29211,7 @@ payload:
   - '+.ifmicro.com'
   - '+.ifmtech.com'
   - '+.ifmx.cc'
+  - '+.ifnews.com'
   - '+.ifonelab.net'
   - '+.iforce-media.com'
   - '+.iforl.com'
@@ -29261,7 +29245,6 @@ payload:
   - '+.igao7.com'
   - '+.igaoda.com'
   - '+.igbox.net'
-  - '+.igdmfg.com'
   - '+.igdzc.com'
   - '+.igea-un.org'
   - '+.igeak.com'
@@ -30082,6 +30065,7 @@ payload:
   - '+.iprchn.com'
   - '+.iprdaily.com'
   - '+.ipresst.com'
+  - '+.iprtop.com'
   - '+.iprun.com'
   - '+.ips8.com'
   - '+.ipssh.net'
@@ -31168,7 +31152,6 @@ payload:
   - '+.jiameng001.com'
   - '+.jiamengdp.com'
   - '+.jiamengfei.com'
-  - '+.jiamengwoba.com'
   - '+.jiami.dog'
   - '+.jiamiantech.com'
   - '+.jiaming.pro'
@@ -31511,7 +31494,6 @@ payload:
   - '+.jilailawyer.com'
   - '+.jileniao.net'
   - '+.jiliguala.com'
-  - '+.jiliguara.xyz'
   - '+.jilingwy.org'
   - '+.jilinpujiyiyuan.com'
   - '+.jilinwula.com'
@@ -32554,7 +32536,6 @@ payload:
   - '+.jsqq.net'
   - '+.jsqsjn.com'
   - '+.jsqt.com'
-  - '+.jsr9.com'
   - '+.jsrcu.com'
   - '+.jsrrcb.com'
   - '+.jsrsrc.com'
@@ -32703,7 +32684,6 @@ payload:
   - '+.jujin8.com'
   - '+.jujiu8.com'
   - '+.jujoy.com'
-  - '+.jujuanpi.com'
   - '+.jujumao.com'
   - '+.jujuwan.com'
   - '+.jukandiannews.com'
@@ -32798,7 +32778,6 @@ payload:
   - '+.junsw.com'
   - '+.junsz.com'
   - '+.juntongtian.com'
-  - '+.junwei1000.com'
   - '+.junwu262.com'
   - '+.junxilinux.com'
   - '+.junyao.tech'
@@ -34991,7 +34970,6 @@ payload:
   - '+.lawyee.net'
   - '+.lawyee.org'
   - '+.lawyer-wangjiawei.com'
-  - '+.lawyer027.com'
   - '+.lawyerbridge.com'
   - '+.lawyermr.com'
   - '+.lawyershanghai.net'
@@ -35134,6 +35112,7 @@ payload:
   - '+.lebogame.net'
   - '+.leboweb.com'
   - '+.lecai.com'
+  - '+.lecai08.com'
   - '+.lecake.com'
   - '+.lechain.com'
   - '+.lechange.com'
@@ -35318,6 +35297,7 @@ payload:
   - '+.leobian.com'
   - '+.leoboard.com'
   - '+.leocode.net'
+  - '+.leohoo.xyz'
   - '+.leonblog.net'
   - '+.leonshadow.com'
   - '+.leozwang.com'
@@ -35390,7 +35370,6 @@ payload:
   - '+.lewang.ltd'
   - '+.leweicn.com'
   - '+.lewen.la'
-  - '+.lewen55.com'
   - '+.lewen567.com'
   - '+.lewen88.com'
   - '+.lewenba.cc'
@@ -35468,7 +35447,6 @@ payload:
   - '+.lfyzjck.com'
   - '+.lg1024.com'
   - '+.lg199.com'
-  - '+.lg473.com'
   - '+.lg5.com'
   - '+.lgctshanghai.com'
   - '+.lgdisplayproduct.com'
@@ -36495,7 +36473,6 @@ payload:
   - '+.longquan-baojian.com'
   - '+.longquecdn.com'
   - '+.longre.com'
-  - '+.longren.com'
   - '+.longruo.com'
   - '+.longsan.com'
   - '+.longseek.com'
@@ -37525,7 +37502,6 @@ payload:
   - '+.manfen.net'
   - '+.mangafuna.xyz'
   - '+.mangafunc.fun'
-  - '+.mangege.com'
   - '+.mangg.com'
   - '+.mangg.net'
   - '+.mangguo.com'
@@ -38227,6 +38203,7 @@ payload:
   - '+.metrofastpass.com'
   - '+.metrolife.mobi'
   - '+.metstr.com'
+  - '+.metword.co'
   - '+.mew.fun'
   - '+.mewhoo.com'
   - '+.mexue.com'
@@ -38740,6 +38717,8 @@ payload:
   - '+.mizhe.com'
   - '+.mizhenhao.com'
   - '+.mizhimedia.com'
+  - '+.mizhizbb.vip'
+  - '+.mizhizbf.vip'
   - '+.mizholdings.com'
   - '+.mizhuanba.com'
   - '+.mizuiren.com'
@@ -39095,6 +39074,7 @@ payload:
   - '+.momoapk.com'
   - '+.momobako.com'
   - '+.momocdn.com'
+  - '+.momoe.ml'
   - '+.momooyo.com'
   - '+.momoshifu.com'
   - '+.momotn.com'
@@ -40297,7 +40277,6 @@ payload:
   - '+.news606.com'
   - '+.newsccn.com'
   - '+.newscctv.net'
-  - '+.newsdao.com'
   - '+.newseasoft.com'
   - '+.newsgd.com'
   - '+.newsgu.com'
@@ -41401,7 +41380,6 @@ payload:
   - '+.ootu.cc'
   - '+.oouee.com'
   - '+.oouyan.com'
-  - '+.ooxx.me'
   - '+.ooxxc.com'
   - '+.op86.net'
   - '+.opahnet.com'
@@ -41929,7 +41907,6 @@ payload:
   - '+.pantrysbest.com'
   - '+.pantum.com'
   - '+.panweizeng.com'
-  - '+.panyoubbs.com'
   - '+.panyun.com'
   - '+.paoao.net'
   - '+.paobuqu.com'
@@ -43170,7 +43147,6 @@ payload:
   - '+.pushjoy.com'
   - '+.pushthink.com'
   - '+.pushtime.net'
-  - '+.puss7.com'
   - '+.putaoa.com'
   - '+.putaocdn.com'
   - '+.putaogame.com'
@@ -44190,6 +44166,7 @@ payload:
   - '+.qmacro.com'
   - '+.qmail.com'
   - '+.qmango.com'
+  - '+.qmbk.com'
   - '+.qmcaifu.com'
   - '+.qmconfig.com'
   - '+.qmei.me'
@@ -44551,6 +44528,7 @@ payload:
   - '+.qudao168.com'
   - '+.qudaowuyou.com'
   - '+.qudaowuyou04.com'
+  - '+.qudayun.com'
   - '+.qudingshui.com'
   - '+.qudong.com'
   - '+.qudong51.net'
@@ -44826,7 +44804,6 @@ payload:
   - '+.qzbonline.com'
   - '+.qzbuxi.com'
   - '+.qzccbank.com'
-  - '+.qzchkj.com'
   - '+.qzcklm.com'
   - '+.qzclfc.com'
   - '+.qzdigg.com'
@@ -44840,7 +44817,6 @@ payload:
   - '+.qzkey.com'
   - '+.qzlo.com'
   - '+.qznews360.com'
-  - '+.qzobao.com'
   - '+.qzone.cc'
   - '+.qzone.com'
   - '+.qzoneapp.com'
@@ -45379,7 +45355,6 @@ payload:
   - '+.rjsjmbwx.com'
   - '+.rjsos.com'
   - '+.rjty.com'
-  - '+.rjypay.com'
   - '+.rjzxw.com'
   - '+.rkanr.com'
   - '+.rkaq110.com'
@@ -46259,7 +46234,6 @@ payload:
   - '+.scytyy.net'
   - '+.sczg.com'
   - '+.sczgzb.com'
-  - '+.sczhaosheng.com'
   - '+.sczl123.com'
   - '+.sczlcts.com'
   - '+.sczprc.com'
@@ -46644,6 +46618,7 @@ payload:
   - '+.seseacg.com'
   - '+.sesier.com'
   - '+.sesubox.com'
+  - '+.setbbts.cyou'
   - '+.seteuid0.com'
   - '+.seuic.com'
   - '+.sevdot.com'
@@ -46980,6 +46955,7 @@ payload:
   - '+.sharevdi.com'
   - '+.sharewaf.com'
   - '+.sharewithu.com'
+  - '+.sharexbar.com'
   - '+.sharkselection.com'
   - '+.sharpbai.com'
   - '+.sharpmobi.com'
@@ -47346,7 +47322,6 @@ payload:
   - '+.shitianxia.vip'
   - '+.shitibaodian.com'
   - '+.shitoc.com'
-  - '+.shitongaf.com'
   - '+.shitou.com'
   - '+.shitouboy.com'
   - '+.shitourom.com'
@@ -47710,7 +47685,6 @@ payload:
   - '+.shuipingzuo.com'
   - '+.shuiqian.cc'
   - '+.shuiwushi.net'
-  - '+.shuixyh.com'
   - '+.shuiyinbao.com'
   - '+.shuiyinyu.com'
   - '+.shuiyoucam.com'
@@ -47966,7 +47940,6 @@ payload:
   - '+.silusheji.com'
   - '+.siluwu.com'
   - '+.silverlight.dlservice.microsoft.com'
-  - '+.silverlighter.net'
   - '+.sim.djicdn.com'
   - '+.sim800.com'
   - '+.simagic.com'
@@ -49257,7 +49230,6 @@ payload:
   - '+.steelphone.com'
   - '+.steelsearcher.com'
   - '+.stefg.org'
-  - '+.stepfpga.com'
   - '+.stfile.com'
   - '+.stg8.com'
   - '+.stgairasia.com'
@@ -50091,7 +50063,6 @@ payload:
   - '+.szjytx.com'
   - '+.szkingdom.com'
   - '+.szkoa.com'
-  - '+.szksqy.com'
   - '+.szlan.com'
   - '+.szlande.com'
   - '+.szlangwei.com'
@@ -50492,7 +50463,6 @@ payload:
   - '+.taobao92.com'
   - '+.taobaocdn.com'
   - '+.taobaocdn.net'
-  - '+.taobaoweb.co'
   - '+.taobaozxw.com'
   - '+.taobc.com'
   - '+.taobeihai.com'
@@ -50714,7 +50684,6 @@ payload:
   - '+.tcs-y.com'
   - '+.tcsae.org'
   - '+.tcsdzz.com'
-  - '+.tcshare.org'
   - '+.tcsnake.com'
   - '+.tcstudents.com'
   - '+.tcstzg.com'
@@ -51641,7 +51610,6 @@ payload:
   - '+.todokeji.com'
   - '+.todokit.xyz'
   - '+.todonow.com'
-  - '+.todosomeone.com'
   - '+.todreamer.com'
   - '+.toec-gdgs.com'
   - '+.toec-iot.com'
@@ -52861,6 +52829,7 @@ payload:
   - '+.ucicq.com'
   - '+.ucjoy.com'
   - '+.uckendo.com'
+  - '+.uclmad.com'
   - '+.uclmimg.com'
   - '+.uclmjs.com'
   - '+.ucloudgda.com'
@@ -53608,7 +53577,6 @@ payload:
   - '+.vcomputes.com'
   - '+.vcooline.com'
   - '+.vcore.hk'
-  - '+.vcpic.com'
   - '+.vcredit.com'
   - '+.vcsint.com'
   - '+.vdaye.com'
@@ -54619,7 +54587,6 @@ payload:
   - '+.wayhu.cc'
   - '+.wayhu8.com'
   - '+.wayingyong.com'
-  - '+.waylon.wang'
   - '+.waynetechs.com'
   - '+.wayos.com'
   - '+.wayoulegal.com'
@@ -56041,7 +56008,6 @@ payload:
   - '+.wnrb.net'
   - '+.wnshouhu.com'
   - '+.wnsqzonebk.com'
-  - '+.wnsr391.com'
   - '+.wnssedu.com'
   - '+.wntool.com'
   - '+.wnwb.com'
@@ -56350,7 +56316,6 @@ payload:
   - '+.wqlin.com'
   - '+.wqqwmw.com'
   - '+.wqrlink.tech'
-  - '+.wqshui.com'
   - '+.wqxuetang.com'
   - '+.wqyunpan.com'
   - '+.wqzx.net'
@@ -56927,7 +56892,6 @@ payload:
   - '+.x-bows.com'
   - '+.x-cti.org'
   - '+.x-jishu.com'
-  - '+.x-medex.com'
   - '+.x-mol.com'
   - '+.x-plans.com'
   - '+.x0769.com'
@@ -58181,7 +58145,6 @@ payload:
   - '+.xinhuipihua.com'
   - '+.xinhuoshuguan.com'
   - '+.xiniu.com'
-  - '+.xiniu1688.com'
   - '+.xiniu3d.com'
   - '+.xiniugushi.com'
   - '+.xiniuyun.com'
@@ -58684,6 +58647,7 @@ payload:
   - '+.xmos.tv'
   - '+.xmpcba.com'
   - '+.xmqianzun.com'
+  - '+.xmqyh321.com'
   - '+.xmr-zh.com'
   - '+.xmrbi.com'
   - '+.xmsec.cc'
@@ -60338,7 +60302,6 @@ payload:
   - '+.yimitongxue.com'
   - '+.yimiyisu.com'
   - '+.yimizhibo.tv'
-  - '+.yimoe.cc'
   - '+.yimutian.com'
   - '+.yinan9.com'
   - '+.yinar.com'
@@ -60413,7 +60376,6 @@ payload:
   - '+.yingxiaoo.com'
   - '+.yingxiong.com'
   - '+.yingxuan.io'
-  - '+.yingxunkeji.net'
   - '+.yingyang630.com'
   - '+.yingyinglicai.com'
   - '+.yingyonghao8.com'
@@ -61643,7 +61605,6 @@ payload:
   - '+.yucl.com'
   - '+.yucoolgame.com'
   - '+.yucui.org'
-  - '+.yudanglasses.com'
   - '+.yudaocha.com'
   - '+.yudi.com'
   - '+.yudianda.com'
@@ -61804,7 +61765,6 @@ payload:
   - '+.yunba.io'
   - '+.yunban.com'
   - '+.yunbang.net'
-  - '+.yunbangcheng.com'
   - '+.yunbaoriji.com'
   - '+.yunbei.com'
   - '+.yunbiao.tv'
@@ -62069,7 +62029,6 @@ payload:
   - '+.yusi.com'
   - '+.yusi.tv'
   - '+.yusi123.com'
-  - '+.yusidunzc.com'
   - '+.yuteng.site'
   - '+.yutian.cc'
   - '+.yutianedu.com'
@@ -62261,6 +62220,7 @@ payload:
   - '+.yycoin.com'
   - '+.yycqc.com'
   - '+.yycro.com'
+  - '+.yydatas.com'
   - '+.yydbzz.com'
   - '+.yydcs.com'
   - '+.yydidai.com'
@@ -63109,7 +63069,6 @@ payload:
   - '+.zhaoyangxueyuan.com'
   - '+.zhaoyaojd.com'
   - '+.zhaoyasai.com'
-  - '+.zhaoyb.net'
   - '+.zhaoyingtian.com'
   - '+.zhaoyinqian.com'
   - '+.zhaoyo.com'
@@ -63281,7 +63240,6 @@ payload:
   - '+.zhidaoanli.com'
   - '+.zhidemai.com'
   - '+.zhidesoft.com'
-  - '+.zhideyimai.com'
   - '+.zhidian3g.com'
   - '+.zhidieyun.com'
   - '+.zhiding0603.com'
@@ -63396,6 +63354,7 @@ payload:
   - '+.zhisanzhao.com'
   - '+.zhisheji.com'
   - '+.zhishi.life'
+  - '+.zhishibo.com'
   - '+.zhishichong.com'
   - '+.zhishifenzi.com'
   - '+.zhishilin.com'
@@ -63522,7 +63481,6 @@ payload:
   - '+.zhongguohao123.com'
   - '+.zhongguohuo.com'
   - '+.zhongguojie.org'
-  - '+.zhongguojinrongtouziwang.com'
   - '+.zhongguojixiewang.com'
   - '+.zhongguomap.com'
   - '+.zhongguopeixun.net'
@@ -63590,7 +63548,6 @@ payload:
   - '+.zhongtieyintong.com'
   - '+.zhongtoufa.net'
   - '+.zhongtuobang.com'
-  - '+.zhongwcs.com'
   - '+.zhongwei-info.com'
   - '+.zhongweijy.com'
   - '+.zhongwenhexinqikan.com'
@@ -63882,7 +63839,6 @@ payload:
   - '+.zhycn.com'
   - '+.zhyd.me'
   - '+.zhyedu.com'
-  - '+.zhyfjj.com'
   - '+.zhyi828.com'
   - '+.zhyingxiao.com'
   - '+.zhyouliang.com'
@@ -64358,7 +64314,6 @@ payload:
   - '+.zmtpc.com'
   - '+.zmtquan.com'
   - '+.zmumu.com'
-  - '+.zmwang.wang'
   - '+.zmwbf.com'
   - '+.zmwo.com'
   - '+.zmxiaoqu.com'
@@ -64432,7 +64387,6 @@ payload:
   - '+.zonghangsl.com'
   - '+.zongheng.com'
   - '+.zongheng001.com'
-  - '+.zonghengche.com'
   - '+.zonghengke.com'
   - '+.zonglai.mobi'
   - '+.zongming.net'
@@ -64826,7 +64780,6 @@ payload:
   - '+.zvv.me'
   - '+.zvzee.com'
   - '+.zw110.com'
-  - '+.zw3e.com'
   - '+.zw3w.com'
   - '+.zw808.com'
   - '+.zw885.com'
