--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1644,7 +1644,6 @@ payload:
   - '+.180qt.com'
   - '+.181230.com'
   - '+.18183.com'
-  - '+.181839.com'
   - '+.18183g.com'
   - '+.1818hm.com'
   - '+.181ps.com'
@@ -5578,6 +5577,7 @@ payload:
   - '+.75367.com'
   - '+.75510010.com'
   - '+.75614.com'
+  - '+.75625358935.com'
   - '+.756u.com'
   - '+.7574.com'
   - '+.75757.com'
@@ -5656,6 +5656,7 @@ payload:
   - '+.77acg.com'
   - '+.77bx.com'
   - '+.77ds.com'
+  - '+.77dushu.com'
   - '+.77ebooks.com'
   - '+.77hei.com'
   - '+.77l.com'
@@ -7630,6 +7631,7 @@ payload:
   - '+.ahfbz.com'
   - '+.ahfdcb.com'
   - '+.ahfensitong.com'
+  - '+.ahfgb.com'
   - '+.ahglj.com'
   - '+.ahgssh.com'
   - '+.ahhanmi.com'
@@ -7939,6 +7941,7 @@ payload:
   - '+.aisee.tv'
   - '+.aiseeking.com'
   - '+.aiseminar.com'
+  - '+.aishangba.org'
   - '+.aishangcan.com'
   - '+.aishengji.com'
   - '+.aisila.com'
@@ -9740,6 +9743,7 @@ payload:
   - '+.baiyangwang.com'
   - '+.baiyangzb.com'
   - '+.baiyaohy.com'
+  - '+.baiycap.net'
   - '+.baiye5.com'
   - '+.baiyewang.com'
   - '+.baiyi181.com'
@@ -10414,6 +10418,7 @@ payload:
   - '+.benkua.com'
   - '+.benlai.com'
   - '+.benlailife.com'
+  - '+.benmao8.com'
   - '+.benmu-health.com'
   - '+.bensedl.com'
   - '+.benseshijue.com'
@@ -14749,6 +14754,7 @@ payload:
   - '+.chunshuizhijia.com'
   - '+.chunsuns.com'
   - '+.chuntiansongart.com'
+  - '+.chunxing51.xyz'
   - '+.chunxuanmao.com'
   - '+.chunyiscdk.com'
   - '+.chunyu.me'
@@ -18055,6 +18061,7 @@ payload:
   - '+.dfyoo.com'
   - '+.dfysw.net'
   - '+.dfyuan.com'
+  - '+.dfyxs.com'
   - '+.dfyydl.com'
   - '+.dfyzx.com'
   - '+.dfzmzyc.com'
@@ -22363,6 +22370,7 @@ payload:
   - '+.fqnovel.com'
   - '+.fqnovelpic.com'
   - '+.fqnovelstatic.com'
+  - '+.fqnovelvod.com'
   - '+.fqpai.com'
   - '+.fqsszx.com'
   - '+.fqxs.org'
@@ -22594,6 +22602,7 @@ payload:
   - '+.funletu.com'
   - '+.funliving.com'
   - '+.funnull31.com'
+  - '+.funnull33.com'
   - '+.funnulldns.com'
   - '+.funnullv27.com'
   - '+.funnullv28.com'
@@ -25692,7 +25701,6 @@ payload:
   - '+.hasee.net'
   - '+.hashcoding.net'
   - '+.hashnest.com'
-  - '+.hasndq.com'
   - '+.hasoltd.com'
   - '+.hassbian.com'
   - '+.hat-toraya.com'
@@ -30200,6 +30208,7 @@ payload:
   - '+.ishumei.com'
   - '+.ishuocha.com'
   - '+.ishuqi.com'
+  - '+.ishuquge.com'
   - '+.isigu.com'
   - '+.isilicontech.com'
   - '+.isinosig.com'
@@ -30890,6 +30899,7 @@ payload:
   - '+.jdcloud.com'
   - '+.jdcloudcache.com'
   - '+.jdcloudcache.net'
+  - '+.jdcloudcs.com'
   - '+.jdcloudedge.com'
   - '+.jdcloudnaming.net'
   - '+.jdcloudstatic.net'
@@ -34483,6 +34493,8 @@ payload:
   - '+.kvemm.com'
   - '+.kvenjoy.com'
   - '+.kvevv.com'
+  - '+.kveww.com'
+  - '+.kvexx.com'
   - '+.kvezz.com'
   - '+.kvhcc.com'
   - '+.kvhdd.com'
@@ -34490,6 +34502,7 @@ payload:
   - '+.kvhmm.com'
   - '+.kvhnn.com'
   - '+.kviso.com'
+  - '+.kvkaa.com'
   - '+.kvkft.com'
   - '+.kvmaa.com'
   - '+.kvogues.com'
@@ -34588,6 +34601,7 @@ payload:
   - '+.kza.cc'
   - '+.kzeaa.com'
   - '+.kzecc.com'
+  - '+.kzeii.com'
   - '+.kzenn.com'
   - '+.kzerr.com'
   - '+.kzore.com'
@@ -37138,6 +37152,7 @@ payload:
   - '+.lytoufang.com'
   - '+.lytpw.com'
   - '+.lytuchuang2.com'
+  - '+.lytuchuang3.com'
   - '+.lyun.me'
   - '+.lyunweb.com'
   - '+.lyvnee.com'
@@ -39857,6 +39872,8 @@ payload:
   - '+.n4115.com'
   - '+.n423.com'
   - '+.n459.com'
+  - '+.n4x8.xyz'
+  - '+.n5738.com'
   - '+.n5878.com'
   - '+.n6579.com'
   - '+.n7326.com'
@@ -45088,6 +45105,7 @@ payload:
   - '+.redsunsets.ml'
   - '+.redyue.com'
   - '+.redyue.org'
+  - '+.reebbwi.cyou'
   - '+.reedoun.com'
   - '+.reeidc.com'
   - '+.reeiss.com'
@@ -45196,6 +45214,7 @@ payload:
   - '+.replays.net'
   - '+.replicated.cc'
   - '+.rerevod.com'
+  - '+.resccske.cyou'
   - '+.resclassaction.com'
   - '+.resheji.com'
   - '+.resistor.today'
@@ -46395,6 +46414,7 @@ payload:
   - '+.sea-group.org'
   - '+.sea-gullmall.com'
   - '+.sea789.com'
+  - '+.seacatcry.com'
   - '+.seagulllocker.com'
   - '+.seaheart.cc'
   - '+.sealand-scan.com'
@@ -49030,6 +49050,7 @@ payload:
   - '+.sql110.com'
   - '+.sqlsec.com'
   - '+.sqngvd.com'
+  - '+.sqqmall.com'
   - '+.sqrc.net'
   - '+.sqreader.com'
   - '+.sqrt9.com'
@@ -51913,6 +51934,7 @@ payload:
   - '+.tp-linkscm.com'
   - '+.tp8.me'
   - '+.tpbook.com'
+  - '+.tpcdnde88de.com'
   - '+.tpengyun.com'
   - '+.tpkey.com'
   - '+.tplife.com'
@@ -59278,6 +59300,7 @@ payload:
   - '+.xxtswzedu.com'
   - '+.xxwenda.com'
   - '+.xxwolo.com'
+  - '+.xxxbiquge.com'
   - '+.xxxfeng.com'
   - '+.xxxlbox.com'
   - '+.xxxmeng.com'
@@ -63105,6 +63128,7 @@ payload:
   - '+.zheliyangsheng.com'
   - '+.zhen-ao.com'
   - '+.zhen.com'
+  - '+.zhen4k.com'
   - '+.zhenai.com'
   - '+.zhenaihn.com'
   - '+.zhenaoyaoye.com'
@@ -63399,6 +63423,7 @@ payload:
   - '+.zhiyoo.com'
   - '+.zhiyoubao.com'
   - '+.zhiyousx.com'
+  - '+.zhiyuanhongda.com'
   - '+.zhiyuanit.com'
   - '+.zhiyuanxingxiang.com'
   - '+.zhiyuanyun.com'
