--- a/directbak.yaml
+++ b/directbak.yaml
@@ -257,7 +257,6 @@ payload:
   - '+.029yjy.com'
   - '+.029yljj.com'
   - '+.029zp.com'
-  - '+.029ztxx.com'
   - '+.02edu.com'
   - '+.02kdid.com'
   - '+.02lu.com'
@@ -708,7 +707,6 @@ payload:
   - '+.10010js.com'
   - '+.10010ll.com'
   - '+.10010nm.com'
-  - '+.10010vip.cloud'
   - '+.1001g.com'
   - '+.1001hw.com'
   - '+.1001p.com'
@@ -1004,7 +1002,6 @@ payload:
   - '+.120btc.com'
   - '+.120dxb.com'
   - '+.120fd.com'
-  - '+.120hpyy.com'
   - '+.120kaoshi.com'
   - '+.120kid.com'
   - '+.120kq.com'
@@ -1273,7 +1270,6 @@ payload:
   - '+.155idc.com'
   - '+.15666.com'
   - '+.15803.com'
-  - '+.1586f.com'
   - '+.1588.tv'
   - '+.15880.com'
   - '+.158c.com'
@@ -5025,7 +5021,6 @@ payload:
   - '+.5u3d.com'
   - '+.5u588.com'
   - '+.5u5u5u5u.com'
-  - '+.5uar.com'
   - '+.5uks.com'
   - '+.5upm.com'
   - '+.5usport.com'
@@ -5795,7 +5790,6 @@ payload:
   - '+.7lk.com'
   - '+.7lw.com'
   - '+.7mah2.com'
-  - '+.7mgame.com'
   - '+.7mo.cc'
   - '+.7modifier.com'
   - '+.7moe.com'
@@ -7717,7 +7711,6 @@ payload:
   - '+.aibaix.com'
   - '+.aibang.com'
   - '+.aibaov.com'
-  - '+.aibeidian.com'
   - '+.aibing.cc'
   - '+.aibo123.com'
   - '+.aibooks.cc'
@@ -8337,7 +8330,6 @@ payload:
   - '+.allfunnies.com'
   - '+.allhistory.com'
   - '+.allianz360.com'
-  - '+.allibook.com'
   - '+.alliedjeep.com'
   - '+.allinfinance.com'
   - '+.allinpay.com'
@@ -8500,7 +8492,6 @@ payload:
   - '+.anf-z.com'
   - '+.anfan.com'
   - '+.anfang086.com'
-  - '+.anfantech.com'
   - '+.anfeng.com'
   - '+.anfensi.com'
   - '+.angeeks.com'
@@ -8801,7 +8792,6 @@ payload:
   - '+.apclc.com'
   - '+.apcupse.com'
   - '+.apdcdn.com'
-  - '+.apdnews.com'
   - '+.ape8.com'
   - '+.apeeri.com'
   - '+.apehorse.com'
@@ -8935,7 +8925,6 @@ payload:
   - '+.appublisher.com'
   - '+.appurl.cc'
   - '+.appurl.me'
-  - '+.appving.com'
   - '+.appvipshop.com'
   - '+.appvv.com'
   - '+.appweiyuan.com'
@@ -10058,7 +10047,6 @@ payload:
   - '+.bayueju.com'
   - '+.bayueweb.com'
   - '+.bayunhome.com'
-  - '+.bayxs.com'
   - '+.bazaarjewelrychina.com'
   - '+.bazai.com'
   - '+.bazhan.com'
@@ -11228,7 +11216,6 @@ payload:
   - '+.bjwfz.com'
   - '+.bjwhds.com'
   - '+.bjwkzl.com'
-  - '+.bjwsk.com'
   - '+.bjwszyxy.com'
   - '+.bjwwhc.com'
   - '+.bjwxhl.com'
@@ -11396,7 +11383,6 @@ payload:
   - '+.bluestar-pc.com'
   - '+.bluestep.cc'
   - '+.blw.moe'
-  - '+.blyol.com'
   - '+.blyun.com'
   - '+.bm001.com'
   - '+.bm2088.com'
@@ -12160,7 +12146,6 @@ payload:
   - '+.c-yl.com'
   - '+.c.citic'
   - '+.c.team'
-  - '+.c0594.com'
   - '+.c0ks.com'
   - '+.c1042.com'
   - '+.c1ass.com'
@@ -12792,7 +12777,6 @@ payload:
   - '+.ccshao.com'
   - '+.ccshell.com'
   - '+.ccsph.com'
-  - '+.ccsw003.com'
   - '+.cct08.com'
   - '+.cct365.net'
   - '+.cctalk.com'
@@ -14284,7 +14268,6 @@ payload:
   - '+.chinaplat.com'
   - '+.chinapm.org'
   - '+.chinapnr.com'
-  - '+.chinapoesy.com'
   - '+.chinaports.com'
   - '+.chinapost-life.com'
   - '+.chinapowerbi.com'
@@ -15111,6 +15094,7 @@ payload:
   - '+.clouddn.com'
   - '+.clouddns.vip'
   - '+.clouddream.net'
+  - '+.cloudflare520.com'
   - '+.cloudgap.net'
   - '+.cloudgfw.com'
   - '+.cloudgfw.net'
@@ -15245,7 +15229,6 @@ payload:
   - '+.cmskcrm.com'
   - '+.cmsky.com'
   - '+.cmsn.biz'
-  - '+.cmspapp77.com'
   - '+.cmstop.com'
   - '+.cmt178.com'
   - '+.cmt7.com'
@@ -16256,6 +16239,7 @@ payload:
   - '+.cpooo.com'
   - '+.cpp-prog.com'
   - '+.cpp114.com'
+  - '+.cpp32.com'
   - '+.cppblog.com'
   - '+.cppc123.com'
   - '+.cppcns.com'
@@ -17986,7 +17970,6 @@ payload:
   - '+.devexel.com'
   - '+.devexpresscn.com'
   - '+.devio.org'
-  - '+.devkang.com'
   - '+.devpss.com'
   - '+.devqinwei.com'
   - '+.devsiki.com'
@@ -18094,7 +18077,6 @@ payload:
   - '+.dgn.cc'
   - '+.dgod.net'
   - '+.dgptjob.com'
-  - '+.dgq2018.com'
   - '+.dgqjj.com'
   - '+.dgrbcj.com'
   - '+.dgsbtjx.com'
@@ -19844,6 +19826,7 @@ payload:
   - '+.easilysend.com'
   - '+.easitcn.com'
   - '+.easiu.com'
+  - '+.eassos.com'
   - '+.east.net'
   - '+.eastall.com'
   - '+.eastbest.com'
@@ -20125,7 +20108,6 @@ payload:
   - '+.edns.com'
   - '+.edodocs.com'
   - '+.edojia.com'
-  - '+.edojs.com'
   - '+.edong.com'
   - '+.edongeejiao.com'
   - '+.edongli.net'
@@ -20252,7 +20234,6 @@ payload:
   - '+.ef-cdn.com'
   - '+.ef360.com'
   - '+.ef360.net'
-  - '+.ef82.com'
   - '+.ef9377.com'
   - '+.efala.net'
   - '+.efang.tv'
@@ -21485,7 +21466,6 @@ payload:
   - '+.favopen.com'
   - '+.favorites.ren'
   - '+.faw-benteng.com'
-  - '+.faw-mazda.com'
   - '+.faw-vw.com'
   - '+.fawaitui.com'
   - '+.fawan.com'
@@ -21514,7 +21494,6 @@ payload:
   - '+.fblife.com'
   - '+.fbook.net'
   - '+.fbsjedu.com'
-  - '+.fbuel.com'
   - '+.fbuy365.com'
   - '+.fbxslw.com'
   - '+.fc-kf.com'
@@ -21670,7 +21649,6 @@ payload:
   - '+.feitian001.com'
   - '+.feitianwu7.com'
   - '+.feitsui.com'
-  - '+.feiwen98.com'
   - '+.feiwentianxia.com'
   - '+.feixiaoquan.com'
   - '+.feixiong.tv'
@@ -21840,7 +21818,6 @@ payload:
   - '+.fffzgh.com'
   - '+.ffhre.com'
   - '+.ffis.me'
-  - '+.ffjd1.com'
   - '+.ffmarket.com'
   - '+.ffmomola.com'
   - '+.ffmulu.com'
@@ -21857,6 +21834,7 @@ payload:
   - '+.ffxiv.xin'
   - '+.ffyinxiang.com'
   - '+.fg.cc'
+  - '+.fgcndigital.com'
   - '+.fgeekcloud.com'
   - '+.fghi34.com'
   - '+.fgidna.com'
@@ -22154,7 +22132,6 @@ payload:
   - '+.flyert.com'
   - '+.flyertea.com'
   - '+.flyertrip.com'
-  - '+.flyfish8.com'
   - '+.flyfishx.com'
   - '+.flyfunny.com'
   - '+.flygo.net'
@@ -22824,6 +22801,7 @@ payload:
   - '+.g1c5.com'
   - '+.g1d.net'
   - '+.g1f5.com'
+  - '+.g1yx.com'
   - '+.g2.link'
   - '+.g207.com'
   - '+.g2g1.com'
@@ -22899,7 +22877,6 @@ payload:
   - '+.game-reign.com'
   - '+.game12315.com'
   - '+.game13.com'
-  - '+.game141.com'
   - '+.game2.com'
   - '+.game345.com'
   - '+.game3vs7novel.com'
@@ -23401,6 +23378,7 @@ payload:
   - '+.gengnie.com'
   - '+.gengwen.net'
   - '+.geniatech.com'
+  - '+.geniusite.com'
   - '+.genrace.com'
   - '+.genscript.com'
   - '+.gensee.com'
@@ -23750,6 +23728,7 @@ payload:
   - '+.gloryview.com'
   - '+.glorze.com'
   - '+.glosku.com'
+  - '+.glp.com'
   - '+.glqh.com'
   - '+.glshimg.com'
   - '+.gltjk.com'
@@ -25784,6 +25763,7 @@ payload:
   - '+.hbgcxj.com'
   - '+.hbgdwl.com'
   - '+.hbglky.com'
+  - '+.hbglobal.com'
   - '+.hbgonglue.com'
   - '+.hbgrb.net'
   - '+.hbgsetc.com'
@@ -26236,7 +26216,6 @@ payload:
   - '+.helpmeng.com'
   - '+.helpton.com'
   - '+.heluowenhua.net'
-  - '+.hemajy.com'
   - '+.hemamax.com'
   - '+.hemanc.com'
   - '+.hemaos.com'
@@ -26260,7 +26239,6 @@ payload:
   - '+.hengancaifu.com'
   - '+.hengannet.com'
   - '+.hengbogroup.com'
-  - '+.hengcaotang.com'
   - '+.hengchang6.com'
   - '+.hengdayun.com'
   - '+.hengdianfilm.com'
@@ -26559,7 +26537,6 @@ payload:
   - '+.higame123.com'
   - '+.higeshi.com'
   - '+.highdigitizing.com'
-  - '+.highgg.com'
   - '+.highgo.com'
   - '+.highlightoptics.com'
   - '+.highlm.com'
@@ -28057,7 +28034,6 @@ payload:
   - '+.huliqun.com'
   - '+.huliyx.com'
   - '+.huluboshi.com'
-  - '+.huluhour.com'
   - '+.huluip.tech'
   - '+.huluo.com'
   - '+.hulusaas.com'
@@ -29111,6 +29087,7 @@ payload:
   - '+.iduochong.com'
   - '+.iduodou.com'
   - '+.iduokan.net'
+  - '+.iduvip.com'
   - '+.idwzx.com'
   - '+.idyjy.com'
   - '+.idyzs.com'
@@ -29281,7 +29258,6 @@ payload:
   - '+.iguder.com'
   - '+.iguitar.me'
   - '+.igumo.cc'
-  - '+.igunsd.xyz'
   - '+.iguoguo.net'
   - '+.iguopin.com'
   - '+.iguoplay.com'
@@ -32897,7 +32873,6 @@ payload:
   - '+.jwshy.com'
   - '+.jwview.com'
   - '+.jwwey.com'
-  - '+.jwx365.com'
   - '+.jwyun.net'
   - '+.jx-bank.com'
   - '+.jx-nc.com'
@@ -33476,7 +33451,6 @@ payload:
   - '+.kdzwy.com'
   - '+.kdzxedu.com'
   - '+.ke.com'
-  - '+.ke01.com'
   - '+.ke51.com'
   - '+.ke6.com'
   - '+.ke86.com'
@@ -34512,6 +34486,7 @@ payload:
   - '+.kwaigobuy.com'
   - '+.kwaisczway7r4tz7m8.com'
   - '+.kwaishop.com'
+  - '+.kwaishouapp.com'
   - '+.kwaixiaodian.com'
   - '+.kwaiying.com'
   - '+.kwaizt.com'
@@ -34831,7 +34806,6 @@ payload:
   - '+.lantian.tv'
   - '+.lanting123.com'
   - '+.lantinglou.com'
-  - '+.lantingmingjia.com'
   - '+.lanuss.com'
   - '+.lanvige.com'
   - '+.lanxicy.com'
@@ -34912,6 +34886,7 @@ payload:
   - '+.laoniushuju.com'
   - '+.laoqiange.club'
   - '+.laoqianzhuang.com'
+  - '+.laoquzhang.com'
   - '+.laoren.com'
   - '+.laosiji.com'
   - '+.laosunit.com'
@@ -35173,7 +35148,6 @@ payload:
   - '+.leeyegy.com'
   - '+.leeyuoxs.com'
   - '+.lefeng.com'
-  - '+.lefengmoving.com'
   - '+.lefinance.com'
   - '+.leftfm.com'
   - '+.leftlady.com'
@@ -37304,7 +37278,6 @@ payload:
   - '+.madown.com'
   - '+.madserving.com'
   - '+.maemo.cc'
-  - '+.mafenggo.com'
   - '+.mafengs.com'
   - '+.mafengvwo.com'
   - '+.mafengwo.com'
@@ -37327,7 +37300,6 @@ payload:
   - '+.magicnetmall.com'
   - '+.magicwatchface.com'
   - '+.magicwinmail.com'
-  - '+.magicyourlife101.com'
   - '+.magiskcn.com'
   - '+.magook.com'
   - '+.maguang.net'
@@ -38320,7 +38292,6 @@ payload:
   - '+.mian4.net'
   - '+.mianbao.com'
   - '+.mianbaodianying.com'
-  - '+.mianbaoduo.com'
   - '+.mianbaoimg.com'
   - '+.mianbaotou.com'
   - '+.miandanbx.com'
@@ -43433,7 +43404,6 @@ payload:
   - '+.qdzz.com'
   - '+.qechu.com'
   - '+.qeebike.com'
-  - '+.qeefee.com'
   - '+.qeegee.com'
   - '+.qeejoo.com'
   - '+.qeeka.com'
@@ -44188,7 +44158,6 @@ payload:
   - '+.qmconfig.com'
   - '+.qmei.me'
   - '+.qmei.vip'
-  - '+.qmengyun.com'
   - '+.qmht.com'
   - '+.qmht.mobi'
   - '+.qmqm.net'
@@ -45043,7 +45012,6 @@ payload:
   - '+.reaicomic.com'
   - '+.realdatamed.com'
   - '+.realforcechina.com'
-  - '+.realjf.com'
   - '+.reallct.com'
   - '+.really100.net'
   - '+.reallylife.com'
@@ -45450,6 +45418,7 @@ payload:
   - '+.rollingstone.net'
   - '+.rollupjs.com'
   - '+.rom100.com'
+  - '+.rom333.com'
   - '+.romhui.com'
   - '+.romjd.com'
   - '+.romleyuan.com'
@@ -48722,7 +48691,6 @@ payload:
   - '+.somdom.com'
   - '+.someabcd.com'
   - '+.somebus.net'
-  - '+.somecoding.com'
   - '+.someet.cc'
   - '+.someonegao.com'
   - '+.somepen.com'
@@ -50043,7 +50011,6 @@ payload:
   - '+.szfangzhouhd.com'
   - '+.szffmr.com'
   - '+.szfg.net'
-  - '+.szfob.cc'
   - '+.szfw.org'
   - '+.szfwzl.com'
   - '+.szfx.com'
@@ -50490,7 +50457,6 @@ payload:
   - '+.taobeirj.com'
   - '+.taobz.com'
   - '+.taoc.cc'
-  - '+.taocece.com'
   - '+.taoche.com'
   - '+.taoci.com'
   - '+.taocloudx.com'
@@ -51757,7 +51723,6 @@ payload:
   - '+.toon.mobi'
   - '+.toonmax.com'
   - '+.toonmaxmedia.com'
-  - '+.tooogooo.com'
   - '+.tooopen.com'
   - '+.tooseo.com'
   - '+.tootour.com'
@@ -51828,6 +51793,7 @@ payload:
   - '+.topthink.net'
   - '+.toptourservice.com'
   - '+.topuc.com'
+  - '+.topuplive.com'
   - '+.topwalk.com'
   - '+.topwanwan.com'
   - '+.topway.org'
@@ -52523,7 +52489,6 @@ payload:
   - '+.tv0001.com'
   - '+.tv002.com'
   - '+.tv189.com'
-  - '+.tv3w.com'
   - '+.tv432.com'
   - '+.tv5box.com'
   - '+.tvandnet.com'
@@ -52721,7 +52686,6 @@ payload:
   - '+.tzdjzu.com'
   - '+.tzfdc.com'
   - '+.tzfeize.xyz'
-  - '+.tzfile.com'
   - '+.tzfuke.com'
   - '+.tzgcjie.com'
   - '+.tzhubo.com'
@@ -52911,7 +52875,6 @@ payload:
   - '+.uestcedu.com'
   - '+.uestcguoji.com'
   - '+.ueuz.com'
-  - '+.ueview.com'
   - '+.uewaf.com'
   - '+.uf-crm.com'
   - '+.uf-tobacco.com'
@@ -54741,7 +54704,6 @@ payload:
   - '+.webankcdn.net'
   - '+.webdissector.com'
   - '+.webdiyer.com'
-  - '+.webdriver.org'
   - '+.webfalse.com'
   - '+.webfont.com'
   - '+.webfoss.com'
@@ -55358,7 +55320,6 @@ payload:
   - '+.wh6z.com'
   - '+.wh702g.ren'
   - '+.whadexpo.com'
-  - '+.whaikido.xyz'
   - '+.whairport.com'
   - '+.whalecloud.com'
   - '+.whaledu.com'
@@ -57347,7 +57308,6 @@ payload:
   - '+.xhlgfsc.com'
   - '+.xhlyjlb.com'
   - '+.xhma.com'
-  - '+.xhn888.com'
   - '+.xhnews.net'
   - '+.xhostserver.com'
   - '+.xhpfw.com'
@@ -57367,14 +57327,12 @@ payload:
   - '+.xhxsw.com'
   - '+.xhxw.com'
   - '+.xhy.com'
-  - '+.xhy998.com'
   - '+.xhyd.com'
   - '+.xhytd.com'
   - '+.xhzmjs.com'
   - '+.xi-soft.com'
   - '+.xi1361.com'
   - '+.xi5jie.com'
-  - '+.xi9p.com'
   - '+.xia1ge.com'
   - '+.xiaa.net'
   - '+.xiabingbao.com'
@@ -59202,7 +59160,6 @@ payload:
   - '+.xuyuanyi.com'
   - '+.xuzhi.net'
   - '+.xuzhoujob.com'
-  - '+.xv5b.com'
   - '+.xvision.club'
   - '+.xvista.com'
   - '+.xvv.cc'
@@ -59524,7 +59481,6 @@ payload:
   - '+.yalayi.net'
   - '+.yalewoo.com'
   - '+.yaliang.net'
-  - '+.yalinfeng.com'
   - '+.yalishiyanji.com'
   - '+.yalixinli.com'
   - '+.yalongsi.com'
@@ -59933,6 +59889,7 @@ payload:
   - '+.yelanxiaoyu.com'
   - '+.yelinmall.com'
   - '+.yelixiali.com'
+  - '+.yellowjm.com'
   - '+.yelook.com'
   - '+.yemablog.com'
   - '+.yemacaijing.com'
@@ -61327,7 +61284,6 @@ payload:
   - '+.youziku.com'
   - '+.youzikuaibao.com'
   - '+.youziqk.com'
-  - '+.youzonggw.com'
   - '+.youzu.com'
   - '+.yovisun.com'
   - '+.yovocloud.com'
@@ -61547,7 +61503,6 @@ payload:
   - '+.yuancdn.com'
   - '+.yuancefund.com'
   - '+.yuanchengxiezuo.com'
-  - '+.yuanchuangchi.com'
   - '+.yuandi.com'
   - '+.yuandiancredit.com'
   - '+.yuandongjixie.com'
@@ -64275,6 +64230,7 @@ payload:
   - '+.zlink-e.com'
   - '+.zlkb.net'
   - '+.zlketang.com'
+  - '+.zlkj.fit'
   - '+.zllife.net'
   - '+.zllyun.com'
   - '+.zlog.cc'
