--- a/directbak.yaml
+++ b/directbak.yaml
@@ -638,7 +638,6 @@ payload:
   - '+.0cname.com'
   - '+.0d.work'
   - '+.0daily.com'
-  - '+.0dayhack.net'
   - '+.0dayku.com'
   - '+.0duxs.com'
   - '+.0easy.com'
@@ -872,7 +871,6 @@ payload:
   - '+.110hack.com'
   - '+.110tm.com'
   - '+.110zhibo.com'
-  - '+.1111.buzz'
   - '+.111111111.com'
   - '+.11111s.info'
   - '+.111155268.com'
@@ -984,6 +982,7 @@ payload:
   - '+.11job.net'
   - '+.11k.cc'
   - '+.11lx.com'
+  - '+.11meigui.com'
   - '+.11pdf.com'
   - '+.11player.com'
   - '+.11qp94.com'
@@ -2252,7 +2251,6 @@ payload:
   - '+.250sy.cc'
   - '+.251633.com'
   - '+.2529.com'
-  - '+.2529212.com'
   - '+.253.com'
   - '+.253952.com'
   - '+.253u.com'
@@ -3312,7 +3310,6 @@ payload:
   - '+.4006026717.com'
   - '+.4006055885.com'
   - '+.4006216888.com'
-  - '+.4006287387.com'
   - '+.4006339177.com'
   - '+.4006620996.com'
   - '+.4006666688.com'
@@ -3451,7 +3448,6 @@ payload:
   - '+.453600.net'
   - '+.45575.com'
   - '+.456.net'
-  - '+.4567.tv'
   - '+.4567w.com'
   - '+.456ss.com'
   - '+.457.com'
@@ -5917,7 +5913,6 @@ payload:
   - '+.80note.com'
   - '+.80paper.com'
   - '+.80s.im'
-  - '+.80s.so'
   - '+.80s.tw'
   - '+.80sec.com'
   - '+.80shihua.com'
@@ -7247,7 +7242,6 @@ payload:
   - '+.aboutgk.com'
   - '+.aboutidc.com'
   - '+.aboutnew.net'
-  - '+.aboutnuke.org'
   - '+.aboutyun.com'
   - '+.abovede6.com'
   - '+.abreader.com'
@@ -8362,7 +8356,6 @@ payload:
   - '+.alonemonkey.com'
   - '+.alongsky.com'
   - '+.alookbrowser.com'
-  - '+.alookql.com'
   - '+.alookweb.com'
   - '+.alpaca.run'
   - '+.alpha-browser.com'
@@ -15932,7 +15925,6 @@ payload:
   - '+.coderyuan.com'
   - '+.coderzh.com'
   - '+.codes51.com'
-  - '+.codesec.net'
   - '+.codesoft.hk'
   - '+.codesoftchina.com'
   - '+.codesoso.com'
@@ -15990,7 +15982,6 @@ payload:
   - '+.cokll.com'
   - '+.cokutau.com'
   - '+.coladrive.com'
-  - '+.colafile.com'
   - '+.colahotpot.com'
   - '+.colasmart.com'
   - '+.coldfunction.com'
@@ -16832,6 +16823,7 @@ payload:
   - '+.cupdapp.com'
   - '+.cupdata.com'
   - '+.cupdns.com'
+  - '+.cupfox.app'
   - '+.cupinn.com'
   - '+.cuplayer.com'
   - '+.cureedit.com'
@@ -17400,7 +17392,6 @@ payload:
   - '+.danqi.com'
   - '+.danqingshaonian.com'
   - '+.danrenzheng.com'
-  - '+.danseshu.com'
   - '+.danteng.me'
   - '+.dantuvc.com'
   - '+.danxia.com'
@@ -18241,7 +18232,6 @@ payload:
   - '+.dianyong123.com'
   - '+.dianyongqi.com'
   - '+.dianyuan.com'
-  - '+.dianyuanic.net'
   - '+.dianzhanggui.net'
   - '+.dianzhangzhipin.com'
   - '+.dianzheli.com'
@@ -18330,7 +18320,6 @@ payload:
   - '+.dig-gy.com'
   - '+.digcredit.com'
   - '+.digforfire.net'
-  - '+.digforfire.org'
   - '+.digg58.com'
   - '+.digi-uniclick.net'
   - '+.digi-wo.com'
@@ -19068,7 +19057,6 @@ payload:
   - '+.down0.com'
   - '+.down123.cc'
   - '+.down123.me'
-  - '+.down1997.com'
   - '+.down7788.com'
   - '+.downbei.com'
   - '+.downcc.com'
@@ -27067,6 +27055,7 @@ payload:
   - '+.hongbao.show'
   - '+.hongbaorili.com'
   - '+.hongbeibang.com'
+  - '+.hongbeicn.com'
   - '+.hongbizi.org'
   - '+.hongbocheng.com'
   - '+.hongbowang.net'
@@ -28157,7 +28146,6 @@ payload:
   - '+.huosubtc.com'
   - '+.huotan.com'
   - '+.huowan.com'
-  - '+.huoxiaoer.net'
   - '+.huoxing24.com'
   - '+.huoxingba.com'
   - '+.huoxingtan66.com'
@@ -28584,7 +28572,6 @@ payload:
   - '+.i-modec.com'
   - '+.i-mofang.com'
   - '+.i-morefun.com'
-  - '+.i-nano2021.com'
   - '+.i-now.com'
   - '+.i-oranges.com'
   - '+.i-same.com'
@@ -29314,6 +29301,7 @@ payload:
   - '+.ihuajian.net'
   - '+.ihuan.me'
   - '+.ihuanling.com'
+  - '+.ihuanque.com'
   - '+.ihuayou.net'
   - '+.ihuazhan.net'
   - '+.ihui.com'
@@ -30578,6 +30566,7 @@ payload:
   - '+.ixinglu.com'
   - '+.ixingpan.com'
   - '+.ixinqing.com'
+  - '+.ixintu.com'
   - '+.ixintui.com'
   - '+.ixinwei.com'
   - '+.ixiqi.com'
@@ -32114,6 +32103,7 @@ payload:
   - '+.jmlk.co'
   - '+.jmmuseum.com'
   - '+.jmonline.org'
+  - '+.jmpcrash.com'
   - '+.jmqy.com'
   - '+.jmrsksj.org'
   - '+.jmsqw.com'
@@ -33097,7 +33087,6 @@ payload:
   - '+.k-xian.com'
   - '+.k0898.com'
   - '+.k0rz3n.com'
-  - '+.k11kuriosity.com'
   - '+.k12.vip'
   - '+.k125.com'
   - '+.k12zx.com'
@@ -33411,7 +33400,6 @@ payload:
   - '+.kblcdn.com'
   - '+.kbrightlaw.com'
   - '+.kbscloud.com'
-  - '+.kbtv.me'
   - '+.kbw2018.com'
   - '+.kbyun.com'
   - '+.kcdn0.com'
@@ -33574,7 +33562,6 @@ payload:
   - '+.kernelnote.com'
   - '+.kerneltravel.net'
   - '+.keruibell.com'
-  - '+.keruotv.com'
   - '+.kerust.com'
   - '+.keruyun.com'
   - '+.keruyun.net'
@@ -34579,6 +34566,7 @@ payload:
   - '+.kzeii.com'
   - '+.kzenn.com'
   - '+.kzerr.com'
+  - '+.kzett.com'
   - '+.kzore.com'
   - '+.kzt.cc'
   - '+.kztpms.com'
@@ -35334,7 +35322,6 @@ payload:
   - '+.letuinet.com'
   - '+.letuknowit.com'
   - '+.letushu.com'
-  - '+.letv-cdn.com'
   - '+.letv.com'
   - '+.letv8.com'
   - '+.letv8.net'
@@ -36106,7 +36093,6 @@ payload:
   - '+.liuyingqiang.com'
   - '+.liuzhichao.com'
   - '+.liuzhixiang.com'
-  - '+.liuzk.com'
   - '+.liuzongyang.com'
   - '+.liuzuo.com'
   - '+.liuzy88.com'
@@ -43969,7 +43955,6 @@ payload:
   - '+.qishu.tw'
   - '+.qishunbao.com'
   - '+.qisool.com'
-  - '+.qisuu.la'
   - '+.qita.love'
   - '+.qitete.com'
   - '+.qiti88.com'
@@ -48422,6 +48407,7 @@ payload:
   - '+.smdiban.net'
   - '+.smdmark.com'
   - '+.smdyvip.com'
+  - '+.smdyy.cc'
   - '+.sme8718.com'
   - '+.smebb.com'
   - '+.smemo.info'
@@ -52184,6 +52170,7 @@ payload:
   - '+.ttsq6.net'
   - '+.ttstream.com'
   - '+.ttsz8.com'
+  - '+.ttt.sh'
   - '+.tttarot.com'
   - '+.ttthing.com'
   - '+.tttuangou.net'
@@ -57072,7 +57059,6 @@ payload:
   - '+.xchuandai.com'
   - '+.xchuxing.com'
   - '+.xcj.com'
-  - '+.xcjd.net'
   - '+.xckszx.com'
   - '+.xclient.info'
   - '+.xcloudbase.com'
@@ -57543,7 +57529,6 @@ payload:
   - '+.xiaoeknow.com'
   - '+.xiaoenai.com'
   - '+.xiaoeryi.com'
-  - '+.xiaofangdeng.com'
   - '+.xiaofantian.com'
   - '+.xiaofeng.org'
   - '+.xiaogan.com'
@@ -57859,7 +57844,6 @@ payload:
   - '+.xidongv.com'
   - '+.xiduobaby.com'
   - '+.xie-jue-tui-xiao.com'
-  - '+.xieat.com'
   - '+.xiebao18.com'
   - '+.xieboke.net'
   - '+.xiechao.org'
@@ -58170,6 +58154,7 @@ payload:
   - '+.xinpianchang.com'
   - '+.xinpianyugao.com'
   - '+.xinpinget.com'
+  - '+.xinpingmu.com'
   - '+.xinpure.com'
   - '+.xinqiannv.com'
   - '+.xinqigu.com'
@@ -61724,7 +61709,6 @@ payload:
   - '+.yumimobi.com'
   - '+.yuming.com'
   - '+.yumingguwen.com'
-  - '+.yumisp7.com'
   - '+.yumixitong.com'
   - '+.yumstone.com'
   - '+.yun-gu.com'
@@ -61990,7 +61974,6 @@ payload:
   - '+.yunzz.net'
   - '+.yupiao.info'
   - '+.yupoo.com'
-  - '+.yupsky.com'
   - '+.yupu.com'
   - '+.yuqianshu.com'
   - '+.yuqiaolong.com'
@@ -63147,7 +63130,6 @@ payload:
   - '+.zhenxiad.com'
   - '+.zhenxian.fm'
   - '+.zhenxingkuangchanpin.com'
-  - '+.zhenyouhuo.com'
   - '+.zhenyouliao.com'
   - '+.zhenyouweb.com'
   - '+.zhenzanzixun.com'
@@ -64546,6 +64528,7 @@ payload:
   - '+.zsr.cc'
   - '+.zsso03.com'
   - '+.zssph.com'
+  - '+.zssq8.com'
   - '+.zssxczxyey.com'
   - '+.zstack.io'
   - '+.zstzs.com'
@@ -64636,7 +64619,6 @@ payload:
   - '+.zufangzi.com'
   - '+.zugame.com'
   - '+.zugeliang01.com'
-  - '+.zuhaoapp.com'
   - '+.zuhaofa.com'
   - '+.zuhaohao.com'
   - '+.zuhaowan.com'
