--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2865,6 +2865,7 @@ payload:
   - '+.360top.com'
   - '+.360totalsecurity.com'
   - '+.360tpcdn.com'
+  - '+.360tres.com'
   - '+.360u9.com'
   - '+.360uu.com'
   - '+.360vcloud.com'
@@ -4065,7 +4066,6 @@ payload:
   - '+.51suitui.com'
   - '+.51sutong.com'
   - '+.51sxue.com'
-  - '+.51syoo.com'
   - '+.51talk.com'
   - '+.51talkenglish.com'
   - '+.51tanbao.com'
@@ -5706,6 +5706,7 @@ payload:
   - '+.7979u.com'
   - '+.797sun.com'
   - '+.797xj.com'
+  - '+.79856.gs'
   - '+.7988wan.com'
   - '+.798com.com'
   - '+.798edu.com'
@@ -6839,7 +6840,6 @@ payload:
   - '+.980512.com'
   - '+.980cje.com'
   - '+.98158.com'
-  - '+.9823df.com'
   - '+.984g.com'
   - '+.985.so'
   - '+.985dh.com'
@@ -16617,7 +16617,6 @@ payload:
   - '+.csres.com'
   - '+.csrgm.com'
   - '+.csrlzyw.com'
-  - '+.csrme.com'
   - '+.csrpme.com'
   - '+.css-js.com'
   - '+.css.network'
@@ -16898,11 +16897,6 @@ payload:
   - '+.cxvlog.com'
   - '+.cxw.com'
   - '+.cxwl.com'
-  - '+.cxwt103.com'
-  - '+.cxwt104.com'
-  - '+.cxwt105.com'
-  - '+.cxwt106.com'
-  - '+.cxwt113.com'
   - '+.cxxjs.com'
   - '+.cxy61.com'
   - '+.cxy7.com'
@@ -17628,6 +17622,7 @@ payload:
   - '+.dazhuangwang.com'
   - '+.dazhuanlan.com'
   - '+.dazibo.com'
+  - '+.dazidazi.com'
   - '+.dazidian.net'
   - '+.dazijia.com'
   - '+.dazpin.com'
@@ -17646,7 +17641,6 @@ payload:
   - '+.dbccv.com'
   - '+.dbcdh.com'
   - '+.dbcsq.com'
-  - '+.dbcxz1.com'
   - '+.dbcxz1.net'
   - '+.dbdna.com'
   - '+.dbfansub.com'
@@ -19237,6 +19231,7 @@ payload:
   - '+.dswmt.com'
   - '+.dswzxh.com'
   - '+.dsxdn.com'
+  - '+.dsxtv.pro'
   - '+.dsxys.com'
   - '+.dsyjz0755.com'
   - '+.dszw.net'
@@ -20481,7 +20476,6 @@ payload:
   - '+.emohe.com'
   - '+.emojimobile.com'
   - '+.emojiwiz.com'
-  - '+.empos.net'
   - '+.emrl0z.com'
   - '+.ems-audio.com'
   - '+.ems517.com'
@@ -21363,6 +21357,7 @@ payload:
   - '+.fante.com'
   - '+.fanten123.com'
   - '+.fantong.com'
+  - '+.fantuanhd.com'
   - '+.fanuchdf.com'
   - '+.fanw8.com'
   - '+.fanwe.com'
@@ -22365,7 +22360,6 @@ payload:
   - '+.freegeeker.com'
   - '+.freehome25.net'
   - '+.freehpcg.com'
-  - '+.freeibook.com'
   - '+.freeidea.win'
   - '+.freejishu.com'
   - '+.freekaobo.com'
@@ -23472,7 +23466,6 @@ payload:
   - '+.ggcida.com'
   - '+.ggcj.com'
   - '+.ggcykf.com'
-  - '+.ggda365.com'
   - '+.ggemo.com'
   - '+.ggerg.com'
   - '+.ggeye.com'
@@ -23950,7 +23943,6 @@ payload:
   - '+.gongyishibao.com'
   - '+.gongyixiang.com'
   - '+.gongyoumishu.com'
-  - '+.gongzi.org'
   - '+.gongzicp.com'
   - '+.gongzifu.com'
   - '+.gongzuoshouji.net'
@@ -24327,7 +24319,6 @@ payload:
   - '+.gtxp2.com'
   - '+.gtzy123.com'
   - '+.gu166.com'
-  - '+.gu360.net'
   - '+.guabu.com'
   - '+.guahao-inc.com'
   - '+.guahao.com'
@@ -24997,6 +24988,7 @@ payload:
   - '+.h5ds.com'
   - '+.h5eco.com'
   - '+.h5gamecdn.club'
+  - '+.h5gd.com'
   - '+.h5gdvip.com'
   - '+.h5in.net'
   - '+.h5jun.com'
@@ -25508,7 +25500,6 @@ payload:
   - '+.haomeili.net'
   - '+.haomijie.com'
   - '+.haomingr.com'
-  - '+.haomm.xyz'
   - '+.haommn.com'
   - '+.haomove.com'
   - '+.haomugua.com'
@@ -27546,6 +27537,7 @@ payload:
   - '+.huacemedia.com'
   - '+.huacenter.com'
   - '+.huachao.vip'
+  - '+.huachengenjoy.com'
   - '+.huachenit.com'
   - '+.huachenyuanyang.com'
   - '+.huaci.cc'
@@ -28788,7 +28780,6 @@ payload:
   - '+.iccircle.com'
   - '+.iccsmart.com'
   - '+.iccsz.com'
-  - '+.iccwi.net'
   - '+.icdeal.com'
   - '+.icdn2.com'
   - '+.icdol.com'
@@ -29436,6 +29427,7 @@ payload:
   - '+.ikuaiy.net'
   - '+.ikuajing.com'
   - '+.ikx.me'
+  - '+.ikyy.cc'
   - '+.il8r.com'
   - '+.ilab-x.com'
   - '+.ilabilab.com'
@@ -29914,7 +29906,6 @@ payload:
   - '+.ioffershow.com'
   - '+.ioffice100.com'
   - '+.ioi.wang'
-  - '+.ioio.pw'
   - '+.ioiox.com'
   - '+.iok.la'
   - '+.iol8.com'
@@ -32250,7 +32241,6 @@ payload:
   - '+.joshuais.me'
   - '+.josncdn.com'
   - '+.jotop.net'
-  - '+.jotrin.com'
   - '+.jouav.com'
   - '+.joudou.com'
   - '+.jourlib.org'
@@ -32311,7 +32301,6 @@ payload:
   - '+.jpkix.com'
   - '+.jpmsg.com'
   - '+.jpnettech.com'
-  - '+.jpqp888.com'
   - '+.jpshuntong.com'
   - '+.jpsmile.com'
   - '+.jptaiyo.com'
@@ -32892,7 +32881,6 @@ payload:
   - '+.jxeduyun.com'
   - '+.jxetv.com'
   - '+.jxexpressway.com'
-  - '+.jxf57.com'
   - '+.jxg1.com'
   - '+.jxgdw.com'
   - '+.jxggcm.com'
@@ -33192,7 +33180,6 @@ payload:
   - '+.kaixinhui.net'
   - '+.kaixinit.com'
   - '+.kaixinlu.com'
-  - '+.kaixinly.com'
   - '+.kaixinpaopao.com'
   - '+.kaixintang.com'
   - '+.kaixue.io'
@@ -34740,7 +34727,6 @@ payload:
   - '+.langtze.com'
   - '+.languangdy.com'
   - '+.langya.org'
-  - '+.langya3.com'
   - '+.langyabang.com'
   - '+.langyuseo.com'
   - '+.langzi.fun'
@@ -37298,7 +37284,6 @@ payload:
   - '+.mahuatalk.com'
   - '+.mai.com'
   - '+.maianhao.com'
-  - '+.maibasa.com'
   - '+.maibw.net'
   - '+.maicha365.com'
   - '+.maichawang.com'
@@ -37987,7 +37972,6 @@ payload:
   - '+.meingrace.com'
   - '+.meinuo123.com'
   - '+.meinv.com'
-  - '+.meinv.page'
   - '+.meip0.me'
   - '+.meip4.me'
   - '+.meipai.com'
@@ -39187,7 +39171,6 @@ payload:
   - '+.moxfive.xyz'
   - '+.moxiai.com'
   - '+.moxian.com'
-  - '+.moxiaofei.com'
   - '+.moxiaoqihuoguo.com'
   - '+.moxing.net'
   - '+.moxingyun.com'
@@ -39713,7 +39696,6 @@ payload:
   - '+.myrtb.net'
   - '+.myrunners.com'
   - '+.myruru.com'
-  - '+.mysanco.com'
   - '+.myscore.org'
   - '+.mysemlife.com'
   - '+.myshow800.com'
@@ -40069,6 +40051,7 @@ payload:
   - '+.ndfsl.com'
   - '+.ndhys.com'
   - '+.ndmh.com'
+  - '+.ndnslab.com'
   - '+.ndoo.net'
   - '+.ndscsoft.com'
   - '+.ndser.net'
@@ -43399,7 +43382,6 @@ payload:
   - '+.qefeng.com'
   - '+.qeto.com'
   - '+.qf027.com'
-  - '+.qf15.cc'
   - '+.qfang.com'
   - '+.qfangimg.com'
   - '+.qfedu.com'
@@ -44698,7 +44680,6 @@ payload:
   - '+.qx162.com'
   - '+.qxbnkj.com'
   - '+.qxbx.com'
-  - '+.qxcdn.cc'
   - '+.qxcu.com'
   - '+.qxiu.com'
   - '+.qxka.com'
@@ -45088,6 +45069,7 @@ payload:
   - '+.relianfit.com'
   - '+.reloadbuzz.com'
   - '+.relxtech.com'
+  - '+.rely87779777.com'
   - '+.remaijie.net'
   - '+.remapcity.com'
   - '+.remark.dance'
@@ -45134,6 +45116,7 @@ payload:
   - '+.renrenhuigo.com'
   - '+.renrening.com'
   - '+.renrenmoney.com'
+  - '+.renrenpeizhen.com'
   - '+.renrenshipu.com'
   - '+.renrenso.com'
   - '+.renrensousuo.com'
@@ -45540,6 +45523,7 @@ payload:
   - '+.rrrdai.com'
   - '+.rrrmj.com'
   - '+.rrrrdaimao.com'
+  - '+.rrrxz.com'
   - '+.rrs.com'
   - '+.rrscdn.com'
   - '+.rrsub.com'
@@ -46671,7 +46655,6 @@ payload:
   - '+.sgnongkang.com'
   - '+.sgou.com'
   - '+.sgshero.com'
-  - '+.sgss8.com'
   - '+.sgsugou.com'
   - '+.sgsxw.com'
   - '+.sguo.com'
@@ -47549,6 +47532,7 @@ payload:
   - '+.shtimg.com'
   - '+.shtion.com'
   - '+.shtml.net'
+  - '+.shtpin.com'
   - '+.shtrhospital.com'
   - '+.shtw.cc'
   - '+.shtwjiebao.com'
@@ -47684,7 +47668,6 @@ payload:
   - '+.shulidata.com'
   - '+.shulihua.net'
   - '+.shuliyun.com'
-  - '+.shuma2.com'
   - '+.shumahezi.com'
   - '+.shumaidata.com'
   - '+.shumeipai.net'
@@ -47830,6 +47813,7 @@ payload:
   - '+.shzhiyingedu.com'
   - '+.shzhyx.com'
   - '+.shzkb.com'
+  - '+.shzpin.com'
   - '+.shzq.com'
   - '+.shzsun.com'
   - '+.si-en.com'
@@ -49405,6 +49389,7 @@ payload:
   - '+.suizhoushi.com'
   - '+.suizui.net'
   - '+.sujh.net'
+  - '+.sujiaozhipin888.com'
   - '+.sukimad.com'
   - '+.sukiu.net'
   - '+.sukkaw.com'
@@ -51219,7 +51204,6 @@ payload:
   - '+.tiaodao.com'
   - '+.tiaoguangbolimo.com'
   - '+.tiaohao.com'
-  - '+.tiaoliao.biz'
   - '+.tiaomu.com'
   - '+.tiaona.com'
   - '+.tiaooo.com'
@@ -51450,7 +51434,6 @@ payload:
   - '+.tjwenjie.com'
   - '+.tjwj88.com'
   - '+.tjwmschool.net'
-  - '+.tjwzy.com'
   - '+.tjxmzd.com'
   - '+.tjxrm.com'
   - '+.tjxxcl.com'
@@ -51750,7 +51733,6 @@ payload:
   - '+.tophr.net'
   - '+.tophub.fun'
   - '+.tophub.today'
-  - '+.topide.com'
   - '+.topitme.com'
   - '+.topjoy.com'
   - '+.topjoycloud.com'
@@ -52752,10 +52734,10 @@ payload:
   - '+.ubgame.com'
   - '+.ubicdn.com'
   - '+.ubijoy.com'
+  - '+.ubiquant.com'
   - '+.ubismartparcel.com'
   - '+.ubixai.com'
   - '+.ubja.vip'
-  - '+.ubk22.com'
   - '+.ubmconlinereg.com'
   - '+.uboat100.com'
   - '+.ubooo.com'
@@ -53281,6 +53263,7 @@ payload:
   - '+.utc-ic.com'
   - '+.utecbj.com'
   - '+.utepo.com'
+  - '+.utermux.dev'
   - '+.uthinks.com'
   - '+.utiankong.com'
   - '+.utogame.com'
@@ -53776,7 +53759,6 @@ payload:
   - '+.vipstore.com'
   - '+.viptail.com'
   - '+.viptarena.com'
-  - '+.viptest.net'
   - '+.viptijian.com'
   - '+.vipwhjtsgpc.com'
   - '+.vipxap.com'
@@ -56771,6 +56753,7 @@ payload:
   - '+.wy28.com'
   - '+.wyaoqing.com'
   - '+.wybbao.com'
+  - '+.wybg666.com'
   - '+.wybgs.com'
   - '+.wycanyin.com'
   - '+.wycntv.com'
@@ -56946,7 +56929,6 @@ payload:
   - '+.xaqdrs.com'
   - '+.xaqsl.com'
   - '+.xaredian.com'
-  - '+.xargin.com'
   - '+.xarxrljt.com'
   - '+.xaseastar.com'
   - '+.xasff.com'
@@ -57231,7 +57213,6 @@ payload:
   - '+.xft123.com'
   - '+.xftclub.com'
   - '+.xfun233.com'
-  - '+.xfwi.com'
   - '+.xfxb.net'
   - '+.xfyousheng.com'
   - '+.xfyun.com'
@@ -58131,7 +58112,6 @@ payload:
   - '+.xinliangxiang.com'
   - '+.xinliceping.com'
   - '+.xinlifudao.com'
-  - '+.xinlimaoyi.com'
   - '+.xinlinghuayuan.com'
   - '+.xinlingletu.com'
   - '+.xinliwanju.com'
@@ -59024,7 +59004,6 @@ payload:
   - '+.xuexiaozhaopin.com'
   - '+.xuexibao.com'
   - '+.xuexigang.com'
-  - '+.xuexijilu.com'
   - '+.xuexila.com'
   - '+.xuexili.com'
   - '+.xuexilinux.com'
@@ -59577,7 +59556,6 @@ payload:
   - '+.yanliu.org'
   - '+.yanlutong.com'
   - '+.yanmbjiage.com'
-  - '+.yanmin99.com'
   - '+.yannv.com'
   - '+.yanoda.com'
   - '+.yanpk.com'
@@ -60081,6 +60059,7 @@ payload:
   - '+.yiban1314.com'
   - '+.yibaogao.com'
   - '+.yibei.com'
+  - '+.yibeianyuming.com'
   - '+.yibenmanhua.com'
   - '+.yibite.com'
   - '+.yicai.com'
@@ -61716,7 +61695,6 @@ payload:
   - '+.yun-img.com'
   - '+.yun-jinrong.com'
   - '+.yun-live.com'
-  - '+.yun.pm'
   - '+.yun123.com'
   - '+.yun61.com'
   - '+.yunadmins.com'
@@ -64426,7 +64404,6 @@ payload:
   - '+.zq99y.com'
   - '+.zqbzs.cc'
   - '+.zqcloudgame.com'
-  - '+.zqctqcz.com'
   - '+.zqfxj.com'
   - '+.zqgame.com'
   - '+.zqgreen.com'
