--- a/directbak.yaml
+++ b/directbak.yaml
@@ -6137,6 +6137,7 @@ payload:
   - '+.880sy.com'
   - '+.880you.com'
   - '+.88106.com'
+  - '+.88225233827.com'
   - '+.8825.com'
   - '+.8828dl.com'
   - '+.88303887.com'
@@ -9285,7 +9286,6 @@ payload:
   - '+.autochips.com'
   - '+.autodg.com'
   - '+.autodmp.com'
-  - '+.autodry.net'
   - '+.autodwg.com'
   - '+.autoesd.com'
   - '+.autofull.net'
@@ -17883,6 +17883,7 @@ payload:
   - '+.demodashi.com'
   - '+.demogic.com'
   - '+.demohour.com'
+  - '+.demon.tw'
   - '+.demonlee.tech'
   - '+.demoso.net'
   - '+.demososo.com'
@@ -27491,6 +27492,7 @@ payload:
   - '+.htmlplusplus.com'
   - '+.htmlsucai.com'
   - '+.htnice.com'
+  - '+.htobl.com'
   - '+.htoo.vip'
   - '+.htpbc.com'
   - '+.htqyy.com'
@@ -33228,6 +33230,7 @@ payload:
   - '+.kangbaifoundation.com'
   - '+.kangbatv.com'
   - '+.kangbidz.com'
+  - '+.kangcdn.com'
   - '+.kangchun.com'
   - '+.kangdajiuzhou.com'
   - '+.kangdaoai.com'
@@ -38436,6 +38439,7 @@ payload:
   - '+.mika123.com'
   - '+.mika18.com'
   - '+.mikannovel.com'
+  - '+.mike-x.com'
   - '+.mikechen.cc'
   - '+.mikecrm.com'
   - '+.mikenn.com'
@@ -41220,6 +41224,7 @@ payload:
   - '+.omlzz.com'
   - '+.ommoo.com'
   - '+.omni-pharma.com'
+  - '+.omnibeautylux.com'
   - '+.omooo.net'
   - '+.omos88.com'
   - '+.omowork.com'
@@ -42736,6 +42741,7 @@ payload:
   - '+.polywuye.com'
   - '+.pomears.com'
   - '+.pomoho.com'
+  - '+.pomowx.com'
   - '+.ponley.com'
   - '+.ponycool.com'
   - '+.ponytest.com'
@@ -43642,7 +43648,6 @@ payload:
   - '+.qichexin.com'
   - '+.qichezhan.net'
   - '+.qichuang.com'
-  - '+.qichuangidc.com'
   - '+.qicn.net'
   - '+.qicolor.com'
   - '+.qicp.net'
@@ -46138,6 +46143,7 @@ payload:
   - '+.scjzy.net'
   - '+.sclf.org'
   - '+.scmccboss.com'
+  - '+.scmchem.com'
   - '+.scmeye.com'
   - '+.scmor.com'
   - '+.scmroad.com'
@@ -57381,6 +57387,7 @@ payload:
   - '+.xiangqu.com'
   - '+.xiangrikui.co'
   - '+.xiangrikui.com'
+  - '+.xiangrikuijianzhan.com'
   - '+.xiangshang360.com'
   - '+.xiangshangban.com'
   - '+.xiangshanpark.com'
